fixed alignment of pagination buttons on smaller devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -386,6 +386,37 @@ header.main h1 {
   padding: 1rem;
 }
 
+.pagination {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+.page-item {
+  padding: 5px 10px;
+  margin: 0px 5px;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  background-color: transparent;
+  border-radius: 0.375em;
+  border: 0;
+  box-shadow: inset 0 0 0 2px #f8a11a;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roboto Slab, serif;
+  font-size: 0.8em;
+  font-weight: 700;
+  height: 3.5em;
+  letter-spacing: 0.075em;
+  line-height: 3.5em;
+  padding: 0 2.25em;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.page-item .page-link {
+  text-decoration: none;
+}
+
 @media (max-width: 600px) {
   .hero {
     text-align: center;
@@ -447,5 +478,16 @@ header.main h1 {
 
   .header .menu li {
     padding: 0px 2px;
+  }
+
+  .pagination {
+    display: table-row;
+  }
+  /* Hide page first and page last buttons on mobile devices */
+  .pagination .page-item:first-child {
+    display: none;
+  }
+  .pagination .page-item:last-child {
+    display: none;
   }
 }
